RESOLVED FIXED124090
REGRESSION (r155660): box-shadow causes overlay scrollbars to be in the wrong position when element is composited (85647)
https://bugs.webkit.org/show_bug.cgi?id=124090
Summary REGRESSION (r155660): box-shadow causes overlay scrollbars to be in the wrong...
Simon Fraser (smfr)
Reported 2013-11-08 17:27:37 PST
Overlay scrollbar layers can be in the wrong place initially if a compositing layer has an offset from its renderer.
Attachments
Patch (12.49 KB, patch)
2013-11-08 17:57 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2013-11-08 17:57:05 PST
Simon Fraser (smfr)
Comment 2 2013-11-08 17:57:35 PST
WebKit Commit Bot
Comment 3 2013-11-11 14:13:00 PST
Comment on attachment 216471 [details] Patch Rejecting attachment 216471 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 216471, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: t.org/repository/webkit/trunk ... Authentication realm: <http://svn.webkit.org:80> Mac OS Forge Password for 'commit-queue@webkit.org': Authentication realm: <http://svn.webkit.org:80> Mac OS Forge Username: Use of uninitialized value $username in chomp at /usr/share/git-core/perl/Git/SVN/Prompt.pm line 114. error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.appspot.com/results/22589419
WebKit Commit Bot
Comment 4 2013-11-11 16:48:26 PST
Comment on attachment 216471 [details] Patch Clearing flags on attachment: 216471 Committed r159082: <http://trac.webkit.org/changeset/159082>
WebKit Commit Bot
Comment 5 2013-11-11 16:48:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.